@@ -32,5 +32,4 @@ supposed to be integrated in blockem at some point in the future:
    far from what a good user interface should look like
  + It would be really nice to the blockem rules translated into the actual 
    blockem game so anybody could have a look without browsing to the website
- + Allow the user to hide non-moving players's pieces
  + Add a way to mark which challenges are 'completed' by the user
