@@ -151,6 +151,8 @@ const char GUI_MENU_ITEM_ACCELERATOR[]                    = "accelgroup1";
 const char GUI_MENU_ITEM_GAME[]                           = "menuitem_game";
 const char GUI_MENU_ITEM_GAME_NEW[]                       = "imagemenuitem_game_new";
 const char GUI_MENU_ITEM_GAME_QUIT[]                      = "imagemenuitem_game_quit";
+const char GUI_MENU_ITEM_VIEW[]                           = "menuitem_view";
+const char GUI_MENU_ITEM_VIEW_PLAYERS_PIECES[]            = "checkmenuitem_view_opponent_pieces";
 const char GUI_MENU_ITEM_SETTINGS[]                       = "menuitem_settings";
 const char GUI_MENU_ITEM_SETTINGS_NKPOINTS[]              = "checkmenuitem_settings_nkpoints";
 const char GUI_MENU_ITEM_SETTINGS_FORBIDDENAREA[]         = "menuitem_forbidden_areas";
