@@ -3,8 +3,11 @@
       tries to load a .dtd file as .xml. Blockem will only try to load
       those files located at $(game-data-folder)/blockem/challenges whose 
       extension is ".xml"
-    - 4 players game added. All players must be humans since there is no
-      AI implemented yet
+    - 4 players game added. All players MUST be humans since there is no
+      AI implemented (yet)
+    - Pieces of any non-moving players can be hidden from the main view
+      through a menu option. This option can be used to show the board bigger
+      while maintaining the window size
     - Fixed error transferring starting coords settings from the "new 
       total allocation game dialog" to the actual game engine
     - Stripped out debug information when compiling without all the DEBUG
